--- a/GodotManager.Tests/GodotManager.Tests.csproj
+++ b/GodotManager.Tests/GodotManager.Tests.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="xunit" Version="2.7.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.5.7" />
     <PackageReference Include="coverlet.collector" Version="6.0.2" />
+    <PackageReference Include="NSubstitute" Version="5.1.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\GodotManager\GodotManager.csproj" />
