--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,6 +5,11 @@ on:
     tags:
       - "v*"
 
+env:
+  DOTNET_VERSION: "10.0.x"
+  APP_NAME: godman
+  WINGET_ID: ${{ vars.WINGET_ID }}
+
 permissions:
   contents: write
 
@@ -17,10 +22,10 @@ jobs:
         include:
           - os: windows-latest
             rid: win-x64
-            artifact: godman-windows-x64
+            asset: windows-x64
           - os: ubuntu-latest
             rid: linux-x64
-            artifact: godman-linux-x64
+            asset: linux-x64
 
     steps:
       - name: Checkout
@@ -29,32 +34,81 @@ jobs:
       - name: Setup .NET
         uses: actions/setup-dotnet@v5
         with:
-          dotnet-version: "10.0.x"
+          dotnet-version: ${{ env.DOTNET_VERSION }}
+
+      - name: Resolve version
+        shell: bash
+        run: |
+          if [[ "${GITHUB_REF_NAME}" != v* ]]; then
+            echo "Tag must start with v."
+            exit 1
+          fi
+          echo "VERSION=${GITHUB_REF_NAME#v}" >> $GITHUB_ENV
+
+      - name: Detect Winget metadata
+        shell: bash
+        run: |
+          if ls dist/winget/*.json >/dev/null 2>&1; then
+            echo "WINGET_FILES=dist/winget/*.json" >> $GITHUB_ENV
+          fi
 
       - name: Restore
         run: dotnet restore
 
       - name: Publish
-        run: dotnet publish GodotManager/GodotManager.csproj -c Release -r ${{ matrix.rid }} --self-contained true /p:PublishSingleFile=true /p:IncludeNativeLibrariesForSelfExtract=true -o publish
+        run: dotnet publish GodotManager/GodotManager.csproj -c Release -r ${{ matrix.rid }} --self-contained true /p:PublishSingleFile=true /p:IncludeNativeLibrariesForSelfExtract=true /p:Version=${{ env.VERSION }} /p:AssemblyVersion=${{ env.VERSION }}.0 /p:FileVersion=${{ env.VERSION }}.0 /p:InformationalVersion=${{ env.VERSION }} -o publish
 
       - name: Package
         shell: pwsh
         run: |
-          Compress-Archive -Path publish/* -DestinationPath ${{ matrix.artifact }}.zip
+          $assetName = "${{ env.APP_NAME }}-${{ matrix.asset }}-${{ env.VERSION }}"
+          Compress-Archive -Path publish/* -DestinationPath "${assetName}.zip"
 
       - name: Generate checksum
         shell: pwsh
         run: |
-          $hash = Get-FileHash -Algorithm SHA256 "${{ matrix.artifact }}.zip" | Select-Object -ExpandProperty Hash
-          "$hash  ${{ matrix.artifact }}.zip" | Out-File -FilePath "${{ matrix.artifact }}.zip.sha256" -Encoding ascii
+          $assetName = "${{ env.APP_NAME }}-${{ matrix.asset }}-${{ env.VERSION }}"
+          $hash = Get-FileHash -Algorithm SHA256 "${assetName}.zip" | Select-Object -ExpandProperty Hash
+          "$hash  ${assetName}.zip" | Out-File -FilePath "${assetName}.zip.sha256" -Encoding ascii
+
+      - name: Prepare Winget metadata
+        if: matrix.asset == 'windows-x64'
+        shell: pwsh
+        run: |
+          $assetName = "${{ env.APP_NAME }}-windows-x64-${{ env.VERSION }}"
+          $shaFile = "${assetName}.zip.sha256"
+          if (-not (Test-Path $shaFile)) {
+            Write-Error "Missing $shaFile"
+            exit 1
+          }
+          $sha = (Get-Content $shaFile).Split(' ')[0]
+          $url = "https://github.com/${{ github.repository }}/releases/download/${{ github.ref_name }}/${assetName}.zip"
+          New-Item -ItemType Directory -Path winget -Force | Out-Null
+          $metadata = @{
+            PackageIdentifier = "${{ env.WINGET_ID }}"
+            PackageVersion = "${{ env.VERSION }}"
+            InstallerUrl = $url
+            InstallerSha256 = $sha
+            InstallerType = "zip"
+            ReleaseTag = "${{ github.ref_name }}"
+          } | ConvertTo-Json -Depth 3
+          $metadata | Out-File -FilePath "winget/winget-metadata.json" -Encoding ascii
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          name: ${{ matrix.artifact }}
+          name: ${{ env.APP_NAME }}-${{ matrix.asset }}-${{ env.VERSION }}
           path: |
-            ${{ matrix.artifact }}.zip
-            ${{ matrix.artifact }}.zip.sha256
+            ${{ env.APP_NAME }}-${{ matrix.asset }}-${{ env.VERSION }}.zip
+            ${{ env.APP_NAME }}-${{ matrix.asset }}-${{ env.VERSION }}.zip.sha256
+
+      - name: Upload Winget metadata
+        if: matrix.asset == 'windows-x64'
+        uses: actions/upload-artifact@v4
+        with:
+          name: winget-metadata
+          path: |
+            winget/winget-metadata.json
 
   release:
     needs: build
@@ -66,10 +120,20 @@ jobs:
         with:
           path: dist
 
+      - name: Resolve version
+        shell: bash
+        run: |
+          if [[ "${GITHUB_REF_NAME}" != v* ]]; then
+            echo "Tag must start with v."
+            exit 1
+          fi
+          echo "VERSION=${GITHUB_REF_NAME#v}" >> $GITHUB_ENV
+
       - name: Create GitHub release
         uses: softprops/action-gh-release@v2
         with:
           files: |
             dist/**/*.zip
             dist/**/*.sha256
+            ${{ env.WINGET_FILES }}
           generate_release_notes: true
